feat: add RichTextEditor component with image upload functionality and Cloudinary integration
- Added RichTextEditor component for rich text editing with various formatting options.
- Integrated Tiptap extensions for image, link, table, and text alignment support.
- Implemented image upload to Cloudinary with size and type validation in the new API route.
- Updated package.json to include necessary Tiptap dependencies and Cloudinary SDK.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,18 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^3.19.0",
+    "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/extension-table": "^3.19.0",
+    "@tiptap/extension-table-cell": "^3.19.0",
+    "@tiptap/extension-table-header": "^3.19.0",
+    "@tiptap/extension-table-row": "^3.19.0",
+    "@tiptap/extension-text-align": "^3.19.0",
+    "@tiptap/extension-underline": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
+    "cloudinary": "^2.9.0",
     "gray-matter": "^4.0.3",
     "next": "16.1.1",
     "react": "19.2.3",
